--- a/MvcKendoNumericTextBox/MvcKendoNumericTextBox.csproj
+++ b/MvcKendoNumericTextBox/MvcKendoNumericTextBox.csproj
@@ -130,7 +130,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
-    <Content Include="Views\Home\CreateNoValidation.cshtml" />
+    <Content Include="Views\Home\CreateWorking.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
